# taw-gcn-iot-anomaly-detection

./: .dockerignore  .gitignore  .zenodo.json  ARCHIVE_MANIFEST.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SOURCE_MANIFEST.sha256  VALIDATION_REPORT.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml
configs/datasets/: demo.yaml  iot23.yaml  ton_iot.yaml
configs/experiments/: ablation.yaml  data_volume.yaml  network_scale.yaml  processing_time.yaml  standard.yaml
configs/graph/: taw_graph_default.yaml
configs/logging/: default.yaml
configs/models/: taw_gcn.yaml
configs/preprocessing/: default.yaml
configs/runtime/: cpu.yaml  gpu.yaml
configs/training/: default.yaml  smoke.yaml
data/: README.md
docs/: computational_complexity.md  dataset_preparation.md  experiment_protocol.md  graph_construction.md  index.md  known_limitations.md  paper_to_code_mapping.md  project_architecture.md  reproducibility.md  split_protocol.md  training_protocol.md  zenodo_release.md
notebooks/: README.md
scripts/: build_graphs.py  create_splits.py  download_data.py  evaluate.py  export_results.py  generate_demo_data.py  inspect_dataset.py  predict.py  prepare_iot23.py  prepare_ton_iot.py  run_ablation.py  run_all_experiments.py  run_data_volume.py  run_experiment.py  run_network_scale.py  train.py  validate_graphs.py  verify_reproducibility.py
src/taw_gcn/: __init__.py  cli.py  constants.py  exceptions.py  pipeline.py  types.py  workflows.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/regression/: test_reproducibility.py
(+107 files in other folders)
