[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taw-gcn"
version = "0.1.0"
description = "Topology-Aware Weighted Graph Convolutional Network for IoT anomaly detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Nahideh Derkhshanfard"},
  {name = "Seyed Payam Fatemi"},
  {name = "Seyed Salar Sefati"},
  {name = "Abbas Mirzaei"}
]
keywords = ["iot", "anomaly-detection", "gcn", "graph-neural-network", "cybersecurity"]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "PyYAML>=6.0",
  "joblib>=1.3",
  "tqdm>=4.66",
  "psutil>=5.9",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
parquet = ["pyarrow>=14"]
faiss = ["faiss-cpu>=1.7.4"]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
  "pandas-stubs>=2.0",
  "types-PyYAML>=6.0"
]

[project.scripts]
taw-gcn-pipeline = "taw_gcn.cli:main"

[project.urls]
Repository = "https://github.com/payamfatemi/taw-gcn-iot-anomaly-detection"
Documentation = "https://github.com/payamfatemi/taw-gcn-iot-anomaly-detection/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["taw_gcn"]

